[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "brainplus"
authors = [{name = "Elia Toselli", email = "elia.toselli@outlook.it"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = ">= 3.10"

[project.urls]
Home = "https://github.com/hilcon222/brainplus"

[project.scripts]
brainplus = "brainplus.brainplus:main"